--- a/src/views/tasks.ejs
+++ b/src/views/tasks.ejs
@@ -7,6 +7,7 @@
         <!--columna-->
         <div class="container text-center">
             <div class="row" id="container-row">
+
                 <% tasks.forEach(task=> { %>
 
                     <article class="col-4 d-flex justify-content-center mb-3" data-id="<%= task.id %>">
@@ -14,8 +15,7 @@
                             <img src="<%= task.poster %>" class="card-img-top" alt="nueva foto">
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    <%= task.title %>
-                                </h5>
+                                    <%= task.title %></h5>
                                 <p class="card-text">
                                     <%= task.description %>
                                 </p>
@@ -24,13 +24,10 @@
                             </div>
                         </div>
                     </article>
-
-                    <%  })  %>
-
+                    <% }) %> 
             </div>
         </div>
         </div>
-
         <!--model-->
         <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -42,15 +39,15 @@
                     <div class="modal-body">
                         <form id="formulario">
                             <div class="mb-3">
-                                <label for="inputTitle" class="col-form-label">title:</label>
+                                <label class="col-form-label">title:</label>
                                 <input type="text" class="form-control" id="inputTitle">
                             </div>
                             <div class="mb-3">
-                                <label for="iputDescription" class="col-form-label">desciption:</label>
+                                <label class="col-form-label">desciption:</label>
                                 <input type="text" class="form-control" id="inputDescription">
                             </div>
                             <div class="mb-3">
-                                <label for="inputPoster" class="col-form-label">poster:</label>
+                                <label class="col-form-label">poster:</label>
                                 <input type="text" class="form-control" id="inputPoster">
                             </div>
                             <div class="modal-footer">
