--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,6 @@
+.container {
+    justify-content: center;
+  }
 .descrip{
     font-weight: bold;
 }
@@ -8,16 +11,21 @@
 
 @media screen and (max-width: 412px) {
     #container-row{
-        justify-content:flex-start;
-        width: 350%;
-    }
-    #container-row{
         display: grid;
         grid-template-rows: auto; 
         grid-template-columns: 1fr;
         grid-gap: 0;
+        /*align-items:center;*/
+        width: 100rex;
+        margin: 0 auto;
     }
-    .card-text {
-        font-size: 16px;
+    .container.card-text {
+        font-size: 14px;
     }
+    .text-center{
+        align-items: center;
+        flex-direction: row;
+
+    }
+    
 }
